--- a/src/index.css
+++ b/src/index.css
@@ -10,93 +10,33 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
-
-/* style reset */
 h1,
 h2,
 h3,
 h4,
+h5,
+h6,
 p {
   margin: 0;
 }
 
 ul,
 ol {
-  /* list-style: none; */
-  padding: 0;
-  margin: 0;
-}
-
-a {
-  text-decoration: none;
-}
-
-.active {
-  color: red;
-}
-
-.navigation {
-  display: flex;
-  gap: 20px;
-  font-size: 20px;
-  height: 40px;
-  padding: 0 15px;
-  margin: 0 auto;
-  margin-bottom: 20px;
-  margin-top: 10px;
-  box-shadow: 0 7px 8px 0 rgba(34, 60, 80, 0.2);
-}
-
-.tranding_title {
-  margin: 10px;
-}
-
-.movieList {
-  margin-left: 30px;
-}
-
-.main_description {
-  display: flex;
-  margin-left: 5px;
-}
-
-.main_thumb {
-  margin-left: 10px;
-  margin-top: 50px;
-}
-
-.movie_layout {
-  display: flex;
-  flex-direction: column;
-  gap: 5px;
-  margin-top: 5px;
-  height: 75px;
-  padding: 0 25px;
-  border: 2px solid #0000008f;
-}
-
-.movie_links {
-  margin-right: 20px;
-}
-
-.cast-list {
   list-style: none;
-  padding: 0;
+  padding-left: 0;
   margin: 0;
 }
 
-.cast-item {
-  display: inline-block;
-  width: calc(100% / 6);
-  text-align: center;
-  padding: 10px;
-  box-sizing: border-box;
+button {
+  padding: 0;
+  border: none;
+  font: inherit;
+  color: inherit;
+  background-color: transparent;
+  cursor: pointer;
 }
 
-.form {
-  margin-left: 15px;
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+    monospace;
 }
